@@ -11,6 +11,8 @@
     this removes a race condition when the forked service terminates
     before pidfilehack notifies minit of the PID
   msvc now accepts more than one service after -o, -d, ...
+  msvc now accepts /etc/minit/sshd instead of sshd as service name
+  better error handling in msvc (more and better error messages)
 
 0.8:
   call waitpid repeatedly until it returns "no children".
